# swp12

./: BINDINGS.md  README.md
apollonius/: README.md
apollonius/data/: brandenburg.novillages.txt  brandenburg.withvillages.txt
apollonius/doc/: Makefile  report.latex
apollonius/doc/presentation/: Makefile
apollonius/gemeinden/: OUTPUT  README  input-for-apollonious.txt  log4j.properties
apollonius/gemeinden/project/: .classpath  .project  build.xml
apollonius/gemeinden/project/scripts/: Evaluator  PointFileCreator  ReadDoubles
apollonius/gemeinden/project/src/swp12/apollonius/evaluation/: Evaluator.java  PointFileCreator.java  ReadDoubles.java
apollonius/main/: Apollonius_site_2.h  CMakeLists.txt  Kernel_wrapper_2.h  README  create_polygons.cpp  create_polygons.h  test.cpp  test.h  test.novillages.batch.sh  test.novillages.sh
apollonius/preprocess/: .classpath  .project  README  build.xml
apollonius/preprocess/scripts/: InputConverter
apollonius/preprocess/src/test/: InputConverter.java
apollonius/test/: Apollonius_graph_traits_2.h  Apollonius_site_2.h.mod  CGAL.diff  CMakeLists.txt  README  compute.intersections.novillages.sh  compute.intersections.sh  compute.intersections.withvillages.sh  test.sh  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test7.novillages.sh  test7.withvillages.sh
apollonius/test/data/: Brandenburg.hull.simple.0.001.wkt  Brandenburg.hull.wkt  Brandenburg.smx  Brandenburg.wkt  sites.2.diffsize.cin  sites.2.equalsize.cin  sites.cin
doc/final-report/: Makefile  literature.bib  report-section-2d-boolean.tex  report-section-intersecting-boundaries.tex  report.latex
doc/final-report/code/: access-dual.c  artificial.c  bbox.c  build-polygon.c  cell.c  eval-strategy1.java  eval-strategy2.java  geojson.c  handle-dual-disamb.c  handle-dual.c  init-apollonius-graph.c  output.json  output.sql  output.wkt  preprocessing.java  read-sites.c  sql.c  training.java  wkt.c
doc/final-report/data/: convert.sh  data-highways.tex  data-highways.txt  data-uniform.tex  data-uniform.txt  place-nodes.osm  place-nodes.txt
doc/midterm-presentation/: report.latex
doc/presentation/: Makefile  presentation.tex
ex01/: README.md
ex01/src/: .gitignore  CMakeLists.txt  create.archive.sh  exercise1.cpp  mail.txt
ex02/convex_hull_add/src/: CMakeLists.txt  main.cpp
ex02/convex_hull_benchmarking/src/: .gitignore  CMakeLists.txt  convex_hull_benchmarking.cpp  graphs1.m  graphs2.m  test.m
ex02/latex/: doc.latex
ex02/onion_peeling/src/: .gitignore  CMakeLists.txt  convex_hull_onion_peeling.cpp
ex02/src/: convex_hull_onion_peeling.cpp
ex03/src/: CMakeLists.txt  test.cpp
set-operations/: CGAL.h  CMakeLists.txt  Parser.cpp  Parser.h  Token.cpp  Token.h  TokenStream.cpp  TokenStream.h  main.cpp
set-operations/test-data/: README  bb1.wkt  bb1_cc.wkt  bb2.wkt  bb3.wkt  bb4.wkt  bb5.wkt  bb6.wkt  berlinbrandenburg.wkt  boundary1.wkt  boundary2.wkt  hole11.wkt  hole12.wkt  intersection14.wkt  intersection24.wkt  intersection25.wkt  intersection26.wkt  intersection34.wkt  polygon1.wkt  polygon2.wkt  polygon3.wkt  polygon4.wkt  polygon5.wkt  polygon6.wkt
test/1/: .gitignore  CMakeLists.txt  README
triangulation/: CMakeLists.txt  README.md  app.cpp  triangulation.cpp  typedefs.h  viewer.cpp  viewer.h
vis/: index.html  input.js
